--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.eurekaclinical</groupId>
         <artifactId>eurekaclinical-parent</artifactId>
-        <version>4-Alpha-1</version>
+        <version>4-Alpha-2-SNAPSHOT</version>
     </parent>
     
     <properties>
