--- a/pom.xml
+++ b/pom.xml
@@ -13,26 +13,26 @@
     <parent>
         <groupId>org.eurekaclinical</groupId>
         <artifactId>eurekaclinical-parent</artifactId>
-        <version>4-Alpha-8</version>
+        <version>4-Alpha-9-SNAPSHOT</version>
     </parent>
 
     <properties>
-        <javamail-version>1.5.6</javamail-version>
-        <commons-logging-version>1.1.3</commons-logging-version>
+        <javamail-version>1.6.2</javamail-version>
+        <commons-logging-version>1.2</commons-logging-version>
         <log4j-version>1.2.17</log4j-version>
         <cas-client-version>3.2.1</cas-client-version>
-        <guice-version>3.0</guice-version>
+        <guice-version>4.2.2</guice-version>
         <javax-jta-version>1.1</javax-jta-version>
-        <hibernate-em-version>5.0.12.Final</hibernate-em-version>
-        <jpamodelgen-version>5.0.12.Final</jpamodelgen-version>
+        <hibernate-em-version>5.4.4.Final</hibernate-em-version>
+        <jpamodelgen-version>5.4.5.Final</jpamodelgen-version>
         <jersey-version>1.19.4</jersey-version>
         <servlet-api-version>3.0.1</servlet-api-version>
         <slf4j-version>1.7.25</slf4j-version>
-        <hibernate-persistence-version>1.0.0.Final</hibernate-persistence-version> <!-- javax.persistence API v2.1 -->
-        <javax.ws.rs-api-version>2.0.1</javax.ws.rs-api-version> <!-- javax.ws.rs API v2.0.1 -->
+        <hibernate-persistence-version>1.0.2.Final</hibernate-persistence-version> <!-- javax.persistence API v2.1 -->
+        <javax.ws.rs-api-version>2.1.1</javax.ws.rs-api-version> <!-- javax.ws.rs API v2.0.1 -->
         <javax.inject-version>1</javax.inject-version> <!-- javax.inject API v1 -->
         <annotation-version>1.0</annotation-version> <!-- javax.annotations API v1 -->
-        <freemarker-version>2.3.26-incubating</freemarker-version>
+        <freemarker-version>2.3.29</freemarker-version>
     </properties>
 
     <scm>
@@ -48,22 +48,22 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.4</version>
+                <version>3.9</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
-                <version>4.1</version>
+                <version>4.4</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.4</version>
+                <version>2.6</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-dbcp2</artifactId>
-                <version>2.1.1</version>
+                <version>2.7.0</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
@@ -73,7 +73,7 @@
             <dependency>
                 <groupId>commons-cli</groupId>
                 <artifactId>commons-cli</artifactId>
-                <version>1.3.1</version>
+                <version>1.4</version>
             </dependency>
             <dependency>
                 <groupId>net.sf.opencsv</groupId>
@@ -93,7 +93,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-csv</artifactId>
-                <version>1.2</version>
+                <version>1.7</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -255,7 +255,7 @@
             <dependency>
                 <groupId>org.dbunit</groupId>
                 <artifactId>dbunit</artifactId>
-                <version>2.5.3</version>
+                <version>2.6.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -273,7 +273,7 @@
             <dependency>
                 <groupId>org.apache.tomcat</groupId>
                 <artifactId>tomcat-catalina</artifactId>
-                <version>8.0.45</version>
+                <version>9.0.26</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
